--- a/HUBO2_R1_9_Current_Version/khr3win/khr3win.rc
+++ b/HUBO2_R1_9_Current_Version/khr3win/khr3win.rc
@@ -2353,6 +2353,7 @@ BEGIN
     PUSHBUTTON      "Cancel Script",IDC_JAEMI_SAYS_CANCEL,480,264,59,22
     GROUPBOX        "Last COM Motion",IDC_STATIC,495,153,65,25
     LTEXT           "None",IDC_ComMotion,501,164,55,8
+    PUSHBUTTON      "Raise Elbow ",IDC_GESTURE_JOU_RAISE_ELBOW,435,192,56,14
 END
 
 IDD_DIALOG_MOTOR_STATE DIALOG DISCARDABLE  0, 0, 187, 98
